--- a/scriptLibrary/demo/layout/scrollActivePer/default.html
+++ b/scriptLibrary/demo/layout/scrollActivePer/default.html
@@ -27,7 +27,7 @@
 		<!-- e: 스크립드 설명 -->
 		<!-- s: api 설명 -->
 		<div class="api">
-			<h2 class="api-title">$("타겟선택자").trpScrollActivePer( $add_class, $show_per);</h2>
+			<h2 class="api-title">$("타겟선택자").trpScrollActivePer( $add_class, $start_per, $end_per );</h2>
 			<div class="api-body">
 				<dl>
 					<dt>설명</dt>
@@ -43,7 +43,7 @@
 					<tbody>
 					<tr>
 						<th scope="col">파라미터 이름</th>
-						<th scope="col">파마미너 설명</th>
+						<th scope="col">파라미터 설명</th>
 					</tr>
 					<tr>
 						<td>$add_class</td>
@@ -51,10 +51,19 @@
 						</td>		
 					</tr>
 					<tr>
-						<td>$show_per</td>
+						<td>$start_per</td>
 						<td> 
+							하단기준 화면 % 
 							타겟이 처음 보일때 `0` ,
-							타겟이 상단 도착시`1.0` , 브라우저 절반 도착시 `0.5`
+							타겟이 상단 도착시`1.0` , 타겟이 브라우저 절반 도착시 `0.5`
+						</td>		
+					</tr>
+					<tr>
+						<td>$end_per</td>
+						<td> 
+							상단기준 화면 % 
+							타겟이 사라질때 `0` ,
+							타겟이 상단 도착시`1.0` , 타겟하단의 브라우저 절반 도착시 `0.5`
 						</td>		
 					</tr>
 					</tbody>
@@ -114,7 +123,6 @@
 					
 
 
-
 <!-- HTML generated using hilite.me --><div style="background: #272822; overflow:auto;width:auto;border:solid gray;border-width:.1em .1em .1em .8em;padding:.2em .6em;"><table><tr><td><pre style="margin: 0; line-height: 125%"> 1
 	2
 	3
@@ -167,7 +175,22 @@
  50
  51
  52
- 53</pre></td><td><pre style="margin: 0; line-height: 125%"><span style="color: #75715e">&lt;!DOCTYPE html&gt;</span>
+ 53
+ 54
+ 55
+ 56
+ 57
+ 58
+ 59
+ 60
+ 61
+ 62
+ 63
+ 64
+ 65
+ 66
+ 67
+ 68</pre></td><td><pre style="margin: 0; line-height: 125%"><span style="color: #75715e">&lt;!DOCTYPE html&gt;</span>
  <span style="color: #f92672">&lt;html&gt;</span>
  <span style="color: #f92672">&lt;head&gt;</span>
 	 <span style="color: #f92672">&lt;meta</span> <span style="color: #a6e22e">charset=</span><span style="color: #e6db74">&quot;UTF-8&quot;</span><span style="color: #f92672">&gt;</span>
@@ -181,6 +204,11 @@
 		 <span style="color: #a6e22e">#container</span> <span style="color: #a6e22e">.position_org_x4</span> <span style="color: #f8f8f2">{</span> <span style="color: #66d9ef">width</span><span style="color: #f92672">:</span> <span style="color: #ae81ff">100</span><span style="color: #f92672">%</span><span style="color: #f8f8f2">;</span> <span style="color: #66d9ef">height</span><span style="color: #f92672">:</span> <span style="color: #ae81ff">400px</span><span style="color: #f8f8f2">;</span> <span style="color: #66d9ef">background-color</span><span style="color: #f92672">:</span> <span style="color: #f8f8f2">blueviolet;</span> <span style="color: #f8f8f2">}</span>
 		 <span style="color: #a6e22e">#container</span> <span style="color: #a6e22e">.position_target</span> <span style="color: #f8f8f2">{</span> <span style="color: #66d9ef">width</span><span style="color: #f92672">:</span> <span style="color: #ae81ff">100</span><span style="color: #f92672">%</span><span style="color: #f8f8f2">;</span> <span style="color: #66d9ef">height</span><span style="color: #f92672">:</span> <span style="color: #ae81ff">500px</span><span style="color: #f8f8f2">;</span> <span style="color: #66d9ef">background-color</span><span style="color: #f92672">:</span> <span style="color: #f8f8f2">brown;</span> <span style="color: #f8f8f2">}</span>
 		 <span style="color: #a6e22e">#container</span> <span style="color: #a6e22e">.position_target.addClass</span> <span style="color: #f8f8f2">{</span>  <span style="color: #66d9ef">background-color</span><span style="color: #f92672">:</span> <span style="color: #ae81ff">#0f0</span><span style="color: #f8f8f2">;</span> <span style="color: #f8f8f2">}</span>
+ 
+		 <span style="color: #a6e22e">#start_bar</span> <span style="color: #f8f8f2">{</span> <span style="color: #66d9ef">position</span><span style="color: #f92672">:</span> <span style="color: #66d9ef">fixed</span><span style="color: #f8f8f2">;</span>  <span style="color: #66d9ef">top</span><span style="color: #f92672">:</span><span style="color: #ae81ff">50</span><span style="color: #f92672">%</span><span style="color: #f8f8f2">;</span> <span style="color: #66d9ef">right</span><span style="color: #f92672">:</span> <span style="color: #ae81ff">0</span><span style="color: #f8f8f2">;</span> <span style="color: #66d9ef">width</span><span style="color: #f92672">:</span> <span style="color: #ae81ff">50px</span><span style="color: #f8f8f2">;</span> <span style="color: #66d9ef">height</span><span style="color: #f92672">:</span> <span style="color: #ae81ff">1px</span><span style="color: #f8f8f2">;</span> <span style="color: #66d9ef">background-color</span><span style="color: #f92672">:</span> <span style="color: #ae81ff">#ff0</span><span style="color: #f8f8f2">;</span> <span style="color: #f8f8f2">}</span>
+		 <span style="color: #a6e22e">#start_bar:after</span> <span style="color: #f8f8f2">{</span> <span style="color: #66d9ef">display</span><span style="color: #f92672">:</span> <span style="color: #66d9ef">block</span><span style="color: #f8f8f2">;</span> <span style="color: #66d9ef">content</span><span style="color: #f92672">:</span> <span style="color: #e6db74">&quot;Start&quot;</span><span style="color: #f8f8f2">;</span> <span style="color: #66d9ef">color</span><span style="color: #f92672">:</span><span style="color: #ae81ff">#ff0</span><span style="color: #f8f8f2">}</span>
+		 <span style="color: #a6e22e">#end_bar</span> <span style="color: #f8f8f2">{</span> <span style="color: #66d9ef">position</span><span style="color: #f92672">:</span> <span style="color: #66d9ef">fixed</span><span style="color: #f8f8f2">;</span>  <span style="color: #66d9ef">top</span><span style="color: #f92672">:</span><span style="color: #ae81ff">60</span><span style="color: #f92672">%</span><span style="color: #f8f8f2">;</span> <span style="color: #66d9ef">right</span><span style="color: #f92672">:</span> <span style="color: #ae81ff">0</span><span style="color: #f8f8f2">;</span> <span style="color: #66d9ef">width</span><span style="color: #f92672">:</span> <span style="color: #ae81ff">50px</span><span style="color: #f8f8f2">;</span> <span style="color: #66d9ef">height</span><span style="color: #f92672">:</span> <span style="color: #ae81ff">1px</span><span style="color: #f8f8f2">;</span> <span style="color: #66d9ef">background-color</span><span style="color: #f92672">:</span> <span style="color: #ae81ff">#0ff</span><span style="color: #f8f8f2">;</span> <span style="color: #f8f8f2">}</span>
+		 <span style="color: #a6e22e">#end_bar:after</span> <span style="color: #f8f8f2">{</span> <span style="color: #66d9ef">display</span><span style="color: #f92672">:</span> <span style="color: #66d9ef">block</span><span style="color: #f8f8f2">;</span> <span style="color: #66d9ef">content</span><span style="color: #f92672">:</span> <span style="color: #e6db74">&quot;End&quot;</span><span style="color: #f8f8f2">;</span> <span style="color: #66d9ef">color</span><span style="color: #f92672">:</span><span style="color: #ae81ff">#0ff</span><span style="color: #f8f8f2">}</span>
 	 <span style="color: #f92672">&lt;/style&gt;</span> 
  <span style="color: #f92672">&lt;/head&gt;</span>
  <span style="color: #f92672">&lt;body&gt;</span>
@@ -190,15 +218,21 @@
 			 <span style="color: #f92672">&lt;div</span> <span style="color: #a6e22e">class=</span><span style="color: #e6db74">&quot;position_org_x4&quot;</span><span style="color: #f92672">&gt;</span> ching line <span style="color: #f92672">&lt;/div&gt;</span>
 			 <span style="color: #f92672">&lt;div</span> <span style="color: #a6e22e">class=</span><span style="color: #e6db74">&quot;position_org_x4&quot;</span><span style="color: #f92672">&gt;</span> ching line <span style="color: #f92672">&lt;/div&gt;</span>
 			 <span style="color: #f92672">&lt;div</span> <span style="color: #a6e22e">class=</span><span style="color: #e6db74">&quot;position_org_x4&quot;</span><span style="color: #f92672">&gt;</span> ching line <span style="color: #f92672">&lt;/div&gt;</span>
-			 <span style="color: #f92672">&lt;div</span> <span style="color: #a6e22e">class=</span><span style="color: #e6db74">&quot;position_target js-motion&quot;</span>  <span style="color: #a6e22e">data-per=</span><span style="color: #e6db74">&quot;&quot;</span> <span style="color: #f92672">&gt;</span>500<span style="color: #f92672">&lt;/div&gt;</span>
+			 <span style="color: #f92672">&lt;div</span> <span style="color: #a6e22e">class=</span><span style="color: #e6db74">&quot;position_target js-motion&quot;</span>  <span style="color: #a6e22e">data-per=</span><span style="color: #e6db74">&quot;&quot;</span> <span style="color: #f92672">&gt;</span>500
+				 <span style="color: #f92672">&lt;p&gt;&lt;/p&gt;</span>
+			 <span style="color: #f92672">&lt;/div&gt;</span>
 			 <span style="color: #f92672">&lt;div</span> <span style="color: #a6e22e">class=</span><span style="color: #e6db74">&quot;position_org_x4&quot;</span><span style="color: #f92672">&gt;</span> ching line <span style="color: #f92672">&lt;/div&gt;</span>
 			 <span style="color: #f92672">&lt;div</span> <span style="color: #a6e22e">class=</span><span style="color: #e6db74">&quot;position_org_x4&quot;</span><span style="color: #f92672">&gt;</span> ching line <span style="color: #f92672">&lt;/div&gt;</span>
 			 <span style="color: #f92672">&lt;div</span> <span style="color: #a6e22e">class=</span><span style="color: #e6db74">&quot;position_org_x4&quot;</span><span style="color: #f92672">&gt;</span> ching line <span style="color: #f92672">&lt;/div&gt;</span>
-			 <span style="color: #f92672">&lt;div</span> <span style="color: #a6e22e">class=</span><span style="color: #e6db74">&quot;position_target js-motion&quot;</span> <span style="color: #f92672">&gt;</span>500<span style="color: #f92672">&lt;/div&gt;</span>
+			 <span style="color: #f92672">&lt;div</span> <span style="color: #a6e22e">class=</span><span style="color: #e6db74">&quot;position_target js-motion&quot;</span> <span style="color: #f92672">&gt;</span>500
+				 <span style="color: #f92672">&lt;p&gt;&lt;/p&gt;</span>
+			 <span style="color: #f92672">&lt;/div&gt;</span>
 			 <span style="color: #f92672">&lt;div</span> <span style="color: #a6e22e">class=</span><span style="color: #e6db74">&quot;position_org_x4&quot;</span><span style="color: #f92672">&gt;</span> ching line <span style="color: #f92672">&lt;/div&gt;</span>
 			 <span style="color: #f92672">&lt;div</span> <span style="color: #a6e22e">class=</span><span style="color: #e6db74">&quot;position_org_x4&quot;</span><span style="color: #f92672">&gt;</span> ching line <span style="color: #f92672">&lt;/div&gt;</span>
 			 <span style="color: #f92672">&lt;div</span> <span style="color: #a6e22e">class=</span><span style="color: #e6db74">&quot;position_org_x4&quot;</span><span style="color: #f92672">&gt;</span> ching line <span style="color: #f92672">&lt;/div&gt;</span>
-			 <span style="color: #f92672">&lt;div</span> <span style="color: #a6e22e">class=</span><span style="color: #e6db74">&quot;position_target js-motion&quot;</span> <span style="color: #f92672">&gt;</span>500<span style="color: #f92672">&lt;/div&gt;</span>
+			 <span style="color: #f92672">&lt;div</span> <span style="color: #a6e22e">class=</span><span style="color: #e6db74">&quot;position_target js-motion&quot;</span> <span style="color: #f92672">&gt;</span>500
+				 <span style="color: #f92672">&lt;p&gt;&lt;/p&gt;</span>
+			 <span style="color: #f92672">&lt;/div&gt;</span>
 			 <span style="color: #f92672">&lt;div</span> <span style="color: #a6e22e">class=</span><span style="color: #e6db74">&quot;position_org_x4&quot;</span><span style="color: #f92672">&gt;</span> ching line <span style="color: #f92672">&lt;/div&gt;</span>
 			 <span style="color: #f92672">&lt;div</span> <span style="color: #a6e22e">class=</span><span style="color: #e6db74">&quot;position_org_x4&quot;</span><span style="color: #f92672">&gt;</span> ching line <span style="color: #f92672">&lt;/div&gt;</span>
 			 <span style="color: #f92672">&lt;div</span> <span style="color: #a6e22e">class=</span><span style="color: #e6db74">&quot;position_org_x4&quot;</span><span style="color: #f92672">&gt;</span> ching line <span style="color: #f92672">&lt;/div&gt;</span>
@@ -206,13 +240,17 @@
 			 <span style="color: #f92672">&lt;div</span> <span style="color: #a6e22e">class=</span><span style="color: #e6db74">&quot;position_org_x4&quot;</span><span style="color: #f92672">&gt;</span> ching line <span style="color: #f92672">&lt;/div&gt;</span>
 			 <span style="color: #f92672">&lt;div</span> <span style="color: #a6e22e">class=</span><span style="color: #e6db74">&quot;position_org_x4&quot;</span><span style="color: #f92672">&gt;</span> ching line <span style="color: #f92672">&lt;/div&gt;</span>
 		<span style="color: #f92672">&lt;/div&gt;</span>
+ 
+		<span style="color: #f92672">&lt;div</span> <span style="color: #a6e22e">id=</span><span style="color: #e6db74">&quot;start_bar&quot;</span><span style="color: #f92672">&gt;&lt;/div&gt;</span>
+		<span style="color: #f92672">&lt;div</span> <span style="color: #a6e22e">id=</span><span style="color: #e6db74">&quot;end_bar&quot;</span><span style="color: #f92672">&gt;&lt;/div&gt;</span>
 		<span style="color: #f92672">&lt;script&gt;</span>
 			
 		 <span style="color: #a6e22e">$</span><span style="color: #f8f8f2">(</span><span style="color: #66d9ef">function</span><span style="color: #f8f8f2">(){</span>
-			 <span style="color: #a6e22e">$</span><span style="color: #f8f8f2">(</span><span style="color: #e6db74">&quot;.js-motion&quot;</span><span style="color: #f8f8f2">).</span><span style="color: #a6e22e">trpScrollActivePer</span><span style="color: #f8f8f2">(</span> <span style="color: #e6db74">&quot;addClass&quot;</span> <span style="color: #f8f8f2">,</span> <span style="color: #ae81ff">0</span><span style="color: #f8f8f2">);</span>
+			 <span style="color: #a6e22e">$</span><span style="color: #f8f8f2">(</span><span style="color: #e6db74">&quot;.js-motion&quot;</span><span style="color: #f8f8f2">).</span><span style="color: #a6e22e">trpScrollActivePer</span><span style="color: #f8f8f2">(</span> <span style="color: #e6db74">&quot;addClass&quot;</span> <span style="color: #f8f8f2">,</span> <span style="color: #ae81ff">0.5</span><span style="color: #f8f8f2">,</span> <span style="color: #ae81ff">0.2</span><span style="color: #f8f8f2">);</span>
  
-			 <span style="color: #a6e22e">$</span><span style="color: #f8f8f2">(</span><span style="color: #e6db74">&quot;.js-motion&quot;</span><span style="color: #f8f8f2">).</span><span style="color: #a6e22e">on</span><span style="color: #f8f8f2">(</span><span style="color: #e6db74">&quot;data-attribute-changed&quot;</span> <span style="color: #f8f8f2">,</span> <span style="color: #66d9ef">function</span><span style="color: #f8f8f2">(</span><span style="color: #a6e22e">$e</span><span style="color: #f8f8f2">){</span>
-				 <span style="color: #a6e22e">console</span><span style="color: #f8f8f2">.</span><span style="color: #a6e22e">log</span><span style="color: #f8f8f2">(</span><span style="color: #a6e22e">$</span><span style="color: #f8f8f2">(</span><span style="color: #66d9ef">this</span><span style="color: #f8f8f2">).</span><span style="color: #a6e22e">index</span><span style="color: #f8f8f2">()</span> <span style="color: #f92672">+</span> <span style="color: #e6db74">&quot; &gt;&gt;&gt;&gt; : &quot;</span><span style="color: #f92672">+</span> <span style="color: #a6e22e">$</span><span style="color: #f8f8f2">(</span><span style="color: #66d9ef">this</span><span style="color: #f8f8f2">).</span><span style="color: #a6e22e">attr</span><span style="color: #f8f8f2">(</span><span style="color: #e6db74">&quot;data-per&quot;</span><span style="color: #f8f8f2">)</span> <span style="color: #f8f8f2">);</span>
+			 <span style="color: #a6e22e">$</span><span style="color: #f8f8f2">(</span><span style="color: #e6db74">&quot;.js-motion&quot;</span><span style="color: #f8f8f2">).</span><span style="color: #a6e22e">on</span><span style="color: #f8f8f2">(</span><span style="color: #e6db74">&quot;data-per-changed&quot;</span> <span style="color: #f8f8f2">,</span> <span style="color: #66d9ef">function</span><span style="color: #f8f8f2">(</span><span style="color: #a6e22e">$e</span><span style="color: #f8f8f2">){</span>
+				 <span style="color: #75715e">//console.log( $(this).index() + &quot; &gt;&gt;&gt;&gt; : &quot;+ $(this).attr(&quot;data-per&quot;) );</span>
+				 <span style="color: #a6e22e">$</span><span style="color: #f8f8f2">(</span><span style="color: #e6db74">&quot;p&quot;</span><span style="color: #f8f8f2">,</span> <span style="color: #66d9ef">this</span><span style="color: #f8f8f2">).</span><span style="color: #a6e22e">text</span><span style="color: #f8f8f2">(</span> <span style="color: #a6e22e">$</span><span style="color: #f8f8f2">(</span><span style="color: #66d9ef">this</span><span style="color: #f8f8f2">).</span><span style="color: #a6e22e">attr</span><span style="color: #f8f8f2">(</span><span style="color: #e6db74">&quot;data-per&quot;</span><span style="color: #f8f8f2">)</span> <span style="color: #f8f8f2">)</span>
 			 <span style="color: #f8f8f2">})</span>
 		 <span style="color: #f8f8f2">})</span>
 	
