--- a/scriptLibrary/demo/layout/scrollActivePer/ex01.html
+++ b/scriptLibrary/demo/layout/scrollActivePer/ex01.html
@@ -12,6 +12,11 @@
     #container .position_org_x4 { width: 100%; height: 400px; background-color: blueviolet; }
     #container .position_target { width: 100%; height: 500px; background-color: brown; }
     #container .position_target.addClass {  background-color: #0f0; }
+
+    #start_bar { position: fixed;  top:50%; right: 0; width: 50px; height: 1px; background-color: #ff0; }
+    #start_bar:after { display: block; content: "Start"; color:#ff0}
+    #end_bar { position: fixed;  top:60%; right: 0; width: 50px; height: 1px; background-color: #0ff; }
+    #end_bar:after { display: block; content: "End"; color:#0ff}
 	</style> 
 </head>
 <body>
@@ -21,15 +26,21 @@
       <div class="position_org_x4"> ching line </div>
       <div class="position_org_x4"> ching line </div>
       <div class="position_org_x4"> ching line </div>
-      <div class="position_target js-motion"  data-per="" >500</div>
+      <div class="position_target js-motion"  data-per="" >500
+        <p></p>
+      </div>
       <div class="position_org_x4"> ching line </div>
       <div class="position_org_x4"> ching line </div>
       <div class="position_org_x4"> ching line </div>
-      <div class="position_target js-motion" >500</div>
+      <div class="position_target js-motion" >500
+        <p></p>
+      </div>
       <div class="position_org_x4"> ching line </div>
       <div class="position_org_x4"> ching line </div>
       <div class="position_org_x4"> ching line </div>
-      <div class="position_target js-motion" >500</div>
+      <div class="position_target js-motion" >500
+        <p></p>
+      </div>
       <div class="position_org_x4"> ching line </div>
       <div class="position_org_x4"> ching line </div>
       <div class="position_org_x4"> ching line </div>
@@ -37,13 +48,17 @@
       <div class="position_org_x4"> ching line </div>
       <div class="position_org_x4"> ching line </div>
    </div>
+
+   <div id="start_bar"></div>
+   <div id="end_bar"></div>
    <script>
    	
     $(function(){
-      $(".js-motion").trpScrollActivePer( "addClass" , 0);
+      $(".js-motion").trpScrollActivePer( "addClass" , 0.5, 0.2);
 
       $(".js-motion").on("data-per-changed" , function($e){
-        console.log( $(this).index() + " >>>> : "+ $(this).attr("data-per") );
+        //console.log( $(this).index() + " >>>> : "+ $(this).attr("data-per") );
+        $("p", this).text( $(this).attr("data-per") )
       })
     })
  
